--- a/arg/tchaikovsky.tex
+++ b/arg/tchaikovsky.tex
@@ -104,16 +104,18 @@ Our musical tastes often boil down to how comfortable we are with our emotions a
 \section{Sets}
 
 The only sets in the current catalog are by Jansons, Karajan, Marriner, and Pletnev. None of them are worth having. In the past there were other complete sets, and you may be able to find some of them.
-Rostropovich: excellent sound-sweet and succulent, from Kingsway Hall in 1976. The interpretations are emotionally generous. The Third Symphony seems weakest, especially its outer movements. The last three symphonies have the strongest emotional charge, and the conductor really identifies with the music. This set makes Haitink sound very tame, Markevitch and Muti rather stiff, and it's better recorded and more consistent than Karajan.
 
-Some of our reviewers consider it a first choice-but it certainly is not for the early symphonies.
+Rostropovich: excellent sound---sweet and succulent, from Kingsway Hall in 1976. The interpretations are emotionally generous. The Third Symphony seems weakest, especially its outer movements. The last three symphonies have the strongest emotional charge, and the conductor really identifies with the music. This set makes Haitink sound very tame, Markevitch and Muti rather stiff, and it's better recorded and more consistent than Karajan.
+Some of our reviewers consider it a first choice---but it certainly is not for the early symphonies.
 
-Ricardo Muti was exciting in an Italian hot-blooded way, but his recordings lack atmosphere and Russian feeling and a feeling for orchestral tone. Romantic longing is slight-ed, and things often feel driven. But sometimes he seems refreshingly direct and to-the-point. That is especially so next to Temirkanov, who pays so much attention to details that the overall sweep is lost. He plays around with tempos and makes a thousand little points. The overall result seems tentative, and one suspects the (Royal Philharmonic) orchestra and conductor were not on the same wavelength.
+Ricardo Muti was exciting in an Italian hot-blooded way, but his recordings lack atmosphere and Russian feeling and a feeling for orchestral tone. Romantic longing is slighted, and things often feel driven. But sometimes he seems refreshingly direct and to-the-point. That is especially so next to Temirkanov, who pays so much attention to details that the overall sweep is lost. He plays around with tempos and makes a thousand little points. The overall result seems tentative, and one suspects the (Royal Philharmonic) orchestra and conductor were not on the same wavelength.
 
 One of the major disasters of phonographic history was the Abbado cycle in Chicago (Sony), Nothing is right about it. (One of our writers actually called it "sickening".) Nor do most of Abbado's other Tchaikovsky recordings make our list. There is something bland and soulless about his conducting that seems almost insulting to Tchaikovsky.
-The Pletnev set is a disaster. It doesn't sound Russian; in fact, it has no tradition, no conviction, no affection. The orchestra is very agile but has no character and sound the same all the way through, The bra genteel, and everything is too well-man
-calculated, cold.
-to amount to much of a statement. Comm The Svetlanovs, trom the late 198m already "historic" performances, becam style of conducting and playing are rapin appearing. He is quite powerful and orl the early symphonies, and the sound but BMG seems to have dropped them at least in the USA.
+
+The Pletnev set is a disaster. It doesn't sound Russian; in fact, it has no tradition, no conviction, no affection. The orchestra is very agile but has no character and sound the same all the way through, The brass are genteel, and everything is too well-mannered to amount to much of a statement.  
+Controlled, calculated, cold.
+
+The Svetlanovs, from the late 1960s are already ``historic'' performances, because the style of conducting and playing are rapidly disappearing. He is quite powerful and original in the early symphonies, and the sound is good, but BMG seems to have dropped them at least in the USA.
 
 \section{Individually}
 
