--- a/arg/tchaikovsky.tex
+++ b/arg/tchaikovsky.tex
@@ -42,6 +42,9 @@ bookmarksopenlevel=10,
 pdfencoding=auto, psdextra
 }
 
+% avoid weird spacing after the period here.
+\def\No#1{No.\@ #1}
+
 % make sure there is enough TOC for reasonable pdf bookmarks.
 \setcounter{tocdepth}{3}
 
@@ -69,13 +72,13 @@ Part of his greatness is that he can appeal to listeners on all sorts of levels.
 
 His popularity also means a crowded catalog. Tchaikovsky sells, and even unsympathetic conductors try to cash in on that. A great many recordings sound like hasty run-throughs. His music relies more heavily than usual on the melodic line. His melodies need time to be heard, space to flower in, air to sound in. It is not good to hurry them along, to drive them too hard, to make them march rather than flow. This is a catalog of shortcomings that plague recorded versions, even from celebrated interpreters. In the last 20 years the race to record Tchaikovsky has faded a great deal, and his CD listings have shrunk every year as companies delete older recordings.
 
-The hasty run-through syndrome applies even to the early symphonies. Almost nobody records them except as part of a complete cycle---and complete cycles are a fairly recent phenomenon. So for years it was hard to get symphonies 1, 2, 3 and {\it Manfred}. Before the era of stereo Beecham recorded 2 and 3, Toscanini {\it Manfred}; there wasn't much else. When I was a student I finally found the horrendous Swarowskys on Urania. Then came Dorati's boring set on Mercury. (On CD, No.\@ 2 is the best, No.\@ 1 is perverse, and the strings sound really scrawny in No.\@ 3.) The first widely available stereo recordings worth having were Bernstein's in the early 70s. That seemed to break the dam; and Muti, Mehta, Rostropovich, Ormandy, and Karajan soon followed---all designed to complete a cycle. But many of them never conducted the early symphonies before they recorded them, and it shows.
+The hasty run-through syndrome applies even to the early symphonies. Almost nobody records them except as part of a complete cycle---and complete cycles are a fairly recent phenomenon. So for years it was hard to get symphonies 1, 2, 3 and {\it Manfred}. Before the era of stereo Beecham recorded 2 and 3, Toscanini {\it Manfred}; there wasn't much else. When I was a student I finally found the horrendous Swarowskys on Urania. Then came Dorati's boring set on Mercury. (On CD, \No2 is the best, \No1 is perverse, and the strings sound really scrawny in \No3.) The first widely available stereo recordings worth having were Bernstein's in the early 70s. That seemed to break the dam; and Muti, Mehta, Rostropovich, Ormandy, and Karajan soon followed---all designed to complete a cycle. But many of them never conducted the early symphonies before they recorded them, and it shows.
 
 I wonder how we ever lived without those wonderful early symphonies.
 
-No.\@ 1 ({\it Winter Daydreams}) may be the most atmospheric thing Tchaikovsky ever wrote and he knew it and never lost his fondness for it. 2 is the {\it Little Russian} (Ukrainian), so named for the use of folktunes he picked up around Kiev. 3 (the English call it the {\it Polish}---a worthless nickname, with no basis in the music) is just packed with melody: what a fertile composer Tchaikovsky was! This was written the same time as {\it Swan Lake} and sounds it.
+\No1 ({\it Winter Daydreams}) may be the most atmospheric thing Tchaikovsky ever wrote and he knew it and never lost his fondness for it. 2 is the {\it Little Russian} (Ukrainian), so named for the use of folktunes he picked up around Kiev. 3 (the English call it the {\it Polish}---a worthless nickname, with no basis in the music) is just packed with melody: what a fertile composer Tchaikovsky was! This was written the same time as {\it Swan Lake} and sounds it.
 
-With the last three symphonies Tchaikovsky wins his place in history; he was one of the few composers able to impose their own personality on the symphony and thus bring new life to the form. In 4 he combines ballet music (considered out of place in a symphony then), folk music (ditto), Russian atmosphere, a sense of Fate, and a triumph over the darker emotions. 5 is much the same recipe, but the final triumph starts to sound hollow. The composer himself later spoke of its insincerity. But it has always been his most popular symphony---it is just so lovable, so assertive, so thrilling. No.\@ 6, the {\it Pathetique}, is ``permeated with subjective feeling, and quite often composing it in my mind I wept copiously''. Seldom had he been able to write a symphony down so fast (No.\@ 3 took less than a month, though) and seldom did his work affect him so deeply. In light of the composer's heavy emotional investment in this music, we become positively angry with surface skimmings and brisk tempos. Tchaikovsky without emotion is pretty pointless. This is not facile music; when in the last movement he submits to his fate, he knows it may mean death.
+With the last three symphonies Tchaikovsky wins his place in history; he was one of the few composers able to impose their own personality on the symphony and thus bring new life to the form. In 4 he combines ballet music (considered out of place in a symphony then), folk music (ditto), Russian atmosphere, a sense of Fate, and a triumph over the darker emotions. 5 is much the same recipe, but the final triumph starts to sound hollow. The composer himself later spoke of its insincerity. But it has always been his most popular symphony---it is just so lovable, so assertive, so thrilling. \No6, the {\it Pathetique}, is ``permeated with subjective feeling, and quite often composing it in my mind I wept copiously''. Seldom had he been able to write a symphony down so fast (\No3 took less than a month, though) and seldom did his work affect him so deeply. In light of the composer's heavy emotional investment in this music, we become positively angry with surface skimmings and brisk tempos. Tchaikovsky without emotion is pretty pointless. This is not facile music; when in the last movement he submits to his fate, he knows it may mean death.
 
 There have been at least 50 recordings of the late symphonies, and they seem to fall into five general categories:
 
@@ -146,7 +149,7 @@ Leaper&	Naxos 550517
 
 The best ever of this symphony is Markevitch, available in a two-disc set (with 1 and 3 and {\it Francesca}), It is wildly exciting but never too fast; the full value of the music is there, in perfect tempos and great sound. Since the two discs cost no more than one full-priced disc, you should buy it while you can.
 
-The Bernstein is slap-dash, and you'll get it if you buy his No.\@ 1. He obviously did not respond to this work and simply rushed through it to get it over with. Even Muti, who also destroyed it, didn't murder it at quite that speed. But Previn, Karajan, and Svetlanov so take the main part of I too fast. Maazel, despite a similar timing for the movement, seems much less rushed. Among those who got this first movement just right are Beecham, Ormandy, Rozhdestvensky, Markevitch, Jansons, and Litton. All were close to 12 minutes, and none made too strong a contrast between the long introduction and the movement proper.
+The Bernstein is slap-dash, and you'll get it if you buy his \No1. He obviously did not respond to this work and simply rushed through it to get it over with. Even Muti, who also destroyed it, didn't murder it at quite that speed. But Previn, Karajan, and Svetlanov so take the main part of I too fast. Maazel, despite a similar timing for the movement, seems much less rushed. Among those who got this first movement just right are Beecham, Ormandy, Rozhdestvensky, Markevitch, Jansons, and Litton. All were close to 12 minutes, and none made too strong a contrast between the long introduction and the movement proper.
 
 Some will like Svetlanov for emotional extremes, Maazel for smoothness (and smooth Telarc sound), Rozhdestvensky and the DG Abbado ({\it not} CBS) for healthy balance, and if it ever returns, the Ormandy for naturalness and majesty. Geoffrey Simon's Chandos recording is not the same music; it's a fine performance of the inferior earlier version.
 
@@ -420,7 +423,7 @@ Gilels & EMI NA
 
 \section{Piano Concerto 2}
 
-The Second Concerto was given its world premiere by the New York Philharmonic in 1881. They played it again in 1903 and 1923, but have they played it since? No one does! It was written around the time of the Fourth Symphony and Swan Lake and it resembles both. All three are optimistic works, and that was unusual with Tchaikovsky. ARG Editor James Lyons once offered an explanation for its neglect: ``There are many for whom Tchaikovsky without tears is not Tchaikovsky''. But there are no tears in the Fourth either. The melodies are as attractive as one expects from Tchaikovsky. It's as well crafted as the First Concerto, and it seems even more difficult for the pianist. That may be the real reason it is seldom played. True, No.\@ 1 is dreamier, more rhapsodic. This work is brighter, more alert-sounding.
+The Second Concerto was given its world premiere by the New York Philharmonic in 1881. They played it again in 1903 and 1923, but have they played it since? No one does! It was written around the time of the Fourth Symphony and Swan Lake and it resembles both. All three are optimistic works, and that was unusual with Tchaikovsky. ARG Editor James Lyons once offered an explanation for its neglect: ``There are many for whom Tchaikovsky without tears is not Tchaikovsky''. But there are no tears in the Fourth either. The melodies are as attractive as one expects from Tchaikovsky. It's as well crafted as the First Concerto, and it seems even more difficult for the pianist. That may be the real reason it is seldom played. True, \No1 is dreamier, more rhapsodic. This work is brighter, more alert-sounding.
 
 When Tchaikovsky wrote this he got carried away in II and wrote long solos for violin and cello, as if he forgot it was a piano concerto. It becomes a triple concerto or perhaps even a piano trio, because it is such intimate music. His friends and advisors pointed out that II was swollen way out of proportion.
 
@@ -489,11 +492,11 @@ Some of Tchaikovsky's freshest and most winsome music can be heard in these suit
 Neeme Jarvi is very straightforward in Suite
 3: no charm or magic. It can never be compared to Svetlanov or Kondrashin or Michael Tilson Thomas. At least it's not as heavy as the Maazel was. Jarvi did much better in Suite 2, but none of his performances (he's done all four in Detroit) are anything to get excited about.
 
-The Rozhdestvensky No.\@ 3 on Erato was special, but it is deleted. Complete sets are by Dorati, Belohlavek, and Sanderling. The Doratis are on Philips, and they were done with the Philharmonia, so you get Hugh Bean as violin soloist in 3. Dorati also has the most pungent accordions in 2:III. The polonaise in 3 is very grand, and the waltzes in 1:II and 2:II have a to Svetlanov.
+The Rozhdestvensky \No3 on Erato was special, but it is deleted. Complete sets are by Dorati, Belohlavek, and Sanderling. The Doratis are on Philips, and they were done with the Philharmonia, so you get Hugh Bean as violin soloist in 3. Dorati also has the most pungent accordions in 2:III. The polonaise in 3 is very grand, and the waltzes in 1:II and 2:II have a to Svetlanov.
 
-Supraphon gives Belohlavek detailed sonics, and he brings passion and intensity. There are missed opportunities in some details, but overall the playing is marvelous, and the interpretations do not have the excesses of Svetlanov (which some of us really like). Sanderling has a good feel for the music and gives each suite plenty of character. No.\@ 2 is especially dramatic. In fact, after the great disc of 1 and 2, Suite 3 seems lackluster. Partly it's tempos, partly the strings and even the violin soloist. At least Naxos sells the discs separately, pairing 1 and 2 and 3 and 4, as BMG did for Svetlanov. No.\@ 4, Mozartiana, is far better at Sanderling's reasonable tempos than rushed by Bélohlavek. Sanderling is the golden mean; Svetlanov may seem too slow to some. Supraphon's bright sound emphasizes winds and horns; the darker Naxos sound has a much more satisfying bass and richer strings.
+Supraphon gives Belohlavek detailed sonics, and he brings passion and intensity. There are missed opportunities in some details, but overall the playing is marvelous, and the interpretations do not have the excesses of Svetlanov (which some of us really like). Sanderling has a good feel for the music and gives each suite plenty of character. \No2 is especially dramatic. In fact, after the great disc of 1 and 2, Suite 3 seems lackluster. Partly it's tempos, partly the strings and even the violin soloist. At least Naxos sells the discs separately, pairing 1 and 2 and 3 and 4, as BMG did for Svetlanov. \No4, Mozartiana, is far better at Sanderling's reasonable tempos than rushed by Bélohlavek. Sanderling is the golden mean; Svetlanov may seem too slow to some. Supraphon's bright sound emphasizes winds and horns; the darker Naxos sound has a much more satisfying bass and richer strings.
 
-Michael Tilson Thomas recorded all but No.\@ 1, and we await a Sony CD reissue. (There was a CBS of 2 + 4.) They were quite wonderful: buoyant without slighting the great melodies. Don't forget the classic Svetlanovs: lovely readings, deeply felt and aptly paced and phrased. Everything feels just right. The climaxes seem natural and inevitable, and Svetlanov seems to speak with the composer's own voice. The strings are utterly gorgeous, especially in No.\@ 3; and in that same suite Svetlanov gives the waltz an intoxicating lilt. In fact, Svetlanov's 3 is the best by far.
+Michael Tilson Thomas recorded all but \No1, and we await a Sony CD reissue. (There was a CBS of 2 + 4.) They were quite wonderful: buoyant without slighting the great melodies. Don't forget the classic Svetlanovs: lovely readings, deeply felt and aptly paced and phrased. Everything feels just right. The climaxes seem natural and inevitable, and Svetlanov seems to speak with the composer's own voice. The strings are utterly gorgeous, especially in \No3; and in that same suite Svetlanov gives the waltz an intoxicating lilt. In fact, Svetlanov's 3 is the best by far.
 
 \bigskip
 \begin{tabular}{l l}
