--- a/arg/tchaikovsky.tex
+++ b/arg/tchaikovsky.tex
@@ -212,7 +212,7 @@ Stokowski has been reissued on Vanguard but it is mannered and eccentric---espec
 Inbal on Denon has some odd moments (the distended ending of l) but sounds spectacular. Trumpets over-blow, but in general the brass is powerful. Strings are creamy. The playing can seem rather detached and emotionless and the interpretation lacking urgency. It may not end up on our ``5 or 6'' best list, but it's pretty good.
 
 The Svetlanov has very crude and blairing brass, and they sound distorted, too (Russ
-1967); the bass is weak (would you belie tenor timpani?). But the strings are very good and Svetlanov does whip up a lot of excitment. His last movement is much too fast, but some like it hot. I and IV are the same Mravinsky; II and III are faster than Mravinsky Speed in itself is not exciting; and, indeed, t speedy Mravinsky leaves us cold.
+1967); the bass is weak (would you belie tenor timpani?). But the strings are very good and Svetlanov does whip up a lot of excitment. His last movement is much too fast, but some like it hot. I and IV are the same Mravinsky; II and III are faster than Mravinsky. Speed in itself is not exciting; and, indeed, the speedy Mravinsky leaves us cold.
 
 Rozhdestvensky's best recording is the Erato. The sound is terrific, and the playing very refined. His interpretation involves ma subtleties and nuances, with exciting climax Tempos are on the slow side. The Rozhdestvensky's IMP set of 4, 5, and 6 is not worth the money---generic in every way.
 Yuri Temirkanov is a remarkable conductor, but there is no reason to own his set of 4,5, and 6 either (RCA). Our reviewer found the sound and playing uneven and the interpretations often slack and languorous. The Beecham was reissued on CD and may still be available in England. It is not stereo but true high fidelity---it sounds superb. No other recording is better loved by all of us. Kubelik recorded it with Beecham's orchestra---also EMI---and that may be around (68223). It comes pretty close to the Beecham but is a little more relaxed. The Beecham is not relaxed! It is heady, even manic---but in a thrilling way. The playing on the Barbirolli is very ragged and coarse.
@@ -289,7 +289,7 @@ Erato issued it in 1987, but it's gone now.
 In 1993 Leonard Slatkin displaced it. As a conductor he identifies more with the music you can feel the depression much more powerfully, and in IV it becomes almost overwhelming. It is not a writhing kind of suffering as in Bernstein, but the listless depression that accompanies hopeless resignation to Fate. The strings are glorious. The whole orchestra is thrilling. Ormandy had more passion and was better at certain details, but the Columbia recording isn't quite as good as the Slatkin.
 And Slatkin had plenty of feeling.
 
-Polyansky seems fairly routine and dull and slow. Svetlanov was also fairly routine and dry but rather fast, with thin string tone and raucous brass---not as sloppy as the 5th but still unacceptable. Bychkov was certainly ``the full treatment'', warm-sounding and warmly emotional. The Inbal was deadpan, bland, and bloodless---very boring and long (49 minutes.
+Polyansky seems fairly routine and dull and slow. Svetlanov was also fairly routine and dry but rather fast, with thin string tone and raucous brass---not as sloppy as the 5th but still unacceptable. Bychkov was certainly ``the full treatment'', warm-sounding and warmly emotional. The Inbal was deadpan, bland, and bloodless---very boring and long (49 minutes).
 Marriner is fairly close to Monteux but minus some indefinable quality that makes the Monteux more soulful (analog sound? the Boston string players?).
 
 There were a number of Mravinskys, but the finest in both sound and interpretation was the Erato from 1982: it breathes just a little easier than the 1960 DG, though it's still fast.
@@ -564,7 +564,7 @@ There was once a full disc from Ormandy---we need it now.
 
 \section{1812 Overture}
 
-Many an 1812 has sold well on the basis of its cannon shots, but cannons are noise, not music, still, Tchaikovsky described it as ``loud and noisy'', so why not cannons? If gunfire is your main criterion, the Dorati on Mercury makes a strong impression (though the Mercury sound is tinny, so I prefer his Detroit recording on London). Others are Bernstein on Sony and Gibson on Chesky (the latter coupled with a tepid Pathetique). There was an even bigger sounding one conducted by Eduardo Diazmunoz---half the Mexican army must have been involved, along with a big organ.
+Many an 1812 has sold well on the basis of its cannon shots, but cannons are noise, not music. Still, Tchaikovsky described it as ``loud and noisy'', so why not cannons? If gunfire is your main criterion, the Dorati on Mercury makes a strong impression (though the Mercury sound is tinny, so I prefer his Detroit recording on London). Others are Bernstein on Sony and Gibson on Chesky (the latter coupled with a tepid Pathetique). There was an even bigger sounding one conducted by Eduardo Diazmunoz---half the Mexican army must have been involved, along with a big organ.
 Not subtle, but this isn't subtle music---overkill is impossible. Reiner merely beats time and cuts a big chunk out of the middle. The Chicago Abbado is boring, Svetlanov hectic.
 
 Recordings with cannon shots are marked
