--- a/arg/tchaikovsky.tex
+++ b/arg/tchaikovsky.tex
@@ -137,7 +137,7 @@ Nobody here can stand the Chicago Abbado:\@ perfunctory, flat, lacking direction
 Markevitch is on the fast side, direct and well conducted but not strong on atmosphere. The Leaper on Naxos is excellent and even has more atmosphere than Markevitch, but in iv he makes the pauses too long in the introduction. Certainly if you don't know the symphony it's a best buy; and it will stand up to of the full-priced versions.
 
 \bigskip
-\begin{tabular}{ l l }
+\begin{tabular}{ l r }
 Thomas&	DG NA\\
 Ormandy&	RCA NA\\
 Litton&	Virgin NA\\
@@ -157,7 +157,7 @@ Svetlanov gets just the right contrast in the tempos of IV. Too much contrast so
 Slatkin is heavy and massive but still cheerful and attractive. Giulini is often too fast but very exciting---a very individual interpretation in gorgeous 1956 sound (but there are cuts in IV). Kurt Masur recorded it twice; the earlier Dresden one (Berlin) is fast and wild, while the later Leipzig (Teldec) seems dull and lumbering. Adrian Leaper does a fine job with this for Naxos (coupled with 4); his tempos are as perfectly judged as Markevitch's. Markevitch and Litton seem slightly preferable---playing, sound, and atmosphere (feel for the music).
 
 \bigskip
-\begin{tabular}{ l l }
+\begin{tabular}{ l r }
 Markevitch& Philips 446148 [2CD]\\
 Litton& Virgin NA\\
 Leaper& Naxos 550488\\
@@ -192,7 +192,7 @@ Once again we may hope for the return of Ormandy; but Jansons will remain more e
 The Wit on Naxos begins (like Levine on Telarc) with a very slow and quiet introduction that will take some getting used to, but after that it is one of the greatest recordings this symphony has had---far better than Jansons or Bernstein or Litton. In fact, though Levine seems more romantic, and though Naxos sound is not Telarc sound, this Naxos recording is better than anything else on the market.
 
 \bigskip
-\begin{tabular}{ l l }
+\begin{tabular}{ l r }
 Wit& Naxos 550518\\
 Jansons& Chandos 8463
 \end{tabular}
@@ -226,7 +226,7 @@ Naxos brings us Adrian Leaper with the
 Polish Radio Orchestra. As Naxos fans have come to know, that's a very fine orchestra, and their sound is enhanced by the hall they record in and by the Naxos engineering. Naxos couples symphonies 2 and 4---a very full disc and an incredible bargain. Leaper's 4 doesn't have the drama and emotion of a Bernstein; it's not overwrought. It's gentler and lighter than many---very sensible. It is not a great reading, but it's very pleasant. Don't buy it to replace Beecham or Solti, but as a start or a supplement.
 
 \bigskip
-\begin{tabular}{ l l }
+\begin{tabular}{ l r }
 Ormandy & Sony 46334\\
 Beecham& EMI NA\\
 Bernstein& Sony 47633
@@ -263,7 +263,7 @@ The Solti is impressive (either one: he did it Twice in Chicago): brilliant play
 Ozawa on DG was too bright and artificial sounding. RCA should reissue his Chicago recording. The latest Chicago one is led by Barenboim, and we found it ``designed to death''---that is, too calculated and unspontaneous---``computer-generated''.
 
 \bigskip
-\begin{tabular}{ l l }
+\begin{tabular}{ l r }
 Bernstein& Sony 47634\\
 Ormandy& Sony 46538\\
 Wit& Naxos 550716\\
@@ -316,7 +316,7 @@ II is beautifully wistful, III fierce and defiant. IV is not as black as Bernste
 Günter Wand's is a somewhat detached view---objective, like a psychiatrist discussing a case. It has plenty of drive and energy, like Toscanini or Reiner. It's also tight and controlled and not emotionally involving.
 
 \bigskip
-\begin{tabular}{ l l }
+\begin{tabular}{ l r }
 Stokowski& RCA NA\\
 Ormandy& Sony 47657\\
 Bernstein& DG 419604 or 469214[2CD]\\
@@ -370,7 +370,7 @@ sounds good.
 Svetlanov is very exciting and very Russian, We who know it love it. It is the best you can get on a single disc right now.
 
 \bigskip
-\begin{tabular}{ l l }
+\begin{tabular}{ l r }
 Muti &EMI NA\\
 Svetlanov & Melodiya NA\\
 Previn & EMI 69776 [2CD]
@@ -412,7 +412,7 @@ Pletnev: no majesty or sense of occasion, inadequate orchestra, very ordinary pi
 Feltsman: rather cold, except for the conducting. Berezovsky: decent playing, weak orchestra, nothing memorable. Nakamura: pompous, mannered, sluggish. Rudy: sluggish. Ogdon: wooden and tentative. Eresko: fresh, alert, spacious, warmly romantic---and deleted. Derek Han (deleted) was stuck with substandard orchestral playing. Historic: Horowitz/Toscanini---great fire and intensity (1943 Carnegie Hall).
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Wild & Chesky 13\\
 Ashkenazy& London NA\\
 Glemser& Naxos 550819\\
@@ -451,7 +451,7 @@ everything.
 Naxos again comes thru: their recording is inferior to none. In every respect it is outstanding: sound, piano, pianist, orchestra, conducting. It is so good that we almost decided to forego the preceding discussion (the competition is really weak). The Concert Fantasy is the coupling---a work that usually bores the pants off us. Only Barry Douglas brought it to life as vividly as Bernd Glemser does.
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Glemser &Naxos 550820
 \end{tabular}
 
@@ -468,7 +468,7 @@ Ponti was the first widely-available recording, and it's on CD; but it's an old-
 The latest recording is Glemser on Naxos, and it will make you feel better about the music. The first movement is not as crisp as Ponti or Graffman, but II is lyrical and glowing (it parallels the same movement of Concerto 2, the piano duetting with the cello quite a bit). III is played with bravura and elan. The coupling is a very good Concerto 1.
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Glemser & Naxos 550819
 \end{tabular}
 
@@ -479,7 +479,7 @@ Heifetz is the most exciting and virtuosic. Oistrakh has more Slavic soul, and O
 Kremer is well balanced, Mullova passionate. Kantorow was very individual---different from any other recording. Takezawa was gentle. The Suwanai is marred by audience noises. Isaac Stern is overripe, full of slides and scoops, and too far in front of the orchestra. Rachlin is polished but seems unexpressive compared to many others.
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Heifetz/Reiner &RCA 5933, 61743, 61495\\
 Oistrakh/Ormandy & Sony 46339\\
 Szeryng/Munch & RCA NA
@@ -499,7 +499,7 @@ Supraphon gives Belohlavek detailed sonics, and he brings passion and intensity.
 Michael Tilson Thomas recorded all but \No1, and we await a Sony CD reissue. (There was a CBS of 2 + 4.) They were quite wonderful: buoyant without slighting the great melodies. Don't forget the classic Svetlanovs: lovely readings, deeply felt and aptly paced and phrased. Everything feels just right. The climaxes seem natural and inevitable, and Svetlanov seems to speak with the composer's own voice. The strings are utterly gorgeous, especially in \No3; and in that same suite Svetlanov gives the waltz an intoxicating lilt. In fact, Svetlanov's 3 is the best by far.
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Svetlanov& Melodiya NA\\
 Sanderling&Naxos 550644 (1+2)\\
 Belohlavek& Supraphon 0969 [2CD]\\
@@ -523,7 +523,7 @@ Ormandy is fastest---and quickest: 22 minutes versus Svetlanov's 33. (He avoids 
 We should mention Slatkin on Telarc: beautiful sound but a rather ordinary interpretation.
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Svetlanov &Melodiya 37878\\
 Ormandy & Sony NA\\
 \end{tabular}
@@ -533,7 +533,7 @@ Ormandy & Sony NA\\
 Everyone has a favorite cellist, so we may be wasting our breath covering this. We don't want to talk you out of Rostropovich, but let us put in a good word for Walerska (gorgeous singing tone and not as dramatic or flamboyant as Rostropovich) and Haroy (expressive, with a real individual profile and a more tenor-like tone, not as deep as Walerska's). The Walerska was with a wonderful Dvorak Concerto; the Haroy was all Tchaikorsky cello pieces. And the Yo-Yo Ma (comes with Prokofief) has to be one of the most beautifully played.
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Walevska& Philips or IMP NA\\
 Hamoy& RCA NA\\
 Ma& Sony 48382
@@ -571,7 +571,7 @@ Recordings with cannon shots are marked
 CA. The composer would also have loved the extra brass (EB) and big bells (BB) some conductors add to the climax: what a glorious noise they make! A chorus (CH) doing the opening hymn can be very moving. Literalists sniff at all this ``adding to the score'', but anyone with ears knows that it really helps the piece. Here is a list of the best recordings, sound included.
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Haitink, EB & Phi NA\\
 Gould BB,CA & RCA NA\\
 Fiedler BB,EB, CA & DG NA\\
@@ -605,7 +605,7 @@ RCA does offer what one critic called ``one of the most thrilling Tchaikovsky re
 Nice, but nothing special: Kunzel (sweet and simple), Barenboim, Jansons, Dorati, Stokowski (yes! It was for Philips and seemed rather pale for old Stoky.) Boring, superficial: Gergiev, Mehta, Ozawa.
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Ormandy &Sony 47657\\
 Karajan & DG NA\\
 Mata &RCA 63586\\
@@ -623,7 +623,7 @@ Next level down but still very good: Litton.
 Done in by inferior sound: Shaw and Barenboim---thin, piercing, tinny. Sound alone would place the Maazel miles ahead of most, had Telarc not deleted it. The strings are richer than any Vienna recording, but they do not swoon with passion the way Ormandy gets his strings to. The Vienna Karajan (on Decca) also has rich, warm strings. (Side by side with Berlin, you'd have to be deaf not to choose Vienna.) Ozawa was fast, but orchestra and sound were very good. The Jansons has a fiery battle scene, but neither the performance nor the disc inspired us when we reviewed it Deleted but notable: Abbado in Boston (not Chicago---that's just a run-through). Giulini is less passionate than serene, but so beautiful. The emotional Rostropovich is pretty good but hard to find. We described the Bernstein as follows: The passion of the star-crossed lovers and the hammer blows of sword on sword, taken at a hell-for-leather tempo with a few extra cymbal crashes thrown in for good measure, make this wonderful music sound as fresh and virile as when the composer first set pen to paper. (The DG remake was also marvelous.)
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Ormandy & Sony 63281\\
 Bernstein & Sony 47632\\
 Maazel & Telarc NA
@@ -669,7 +669,7 @@ Beaux Arts is unromantic, prosaic, square; the Yuval insipid, the Delos recordin
 The Haydn Trio of Vienna gave a vigorous and intelligent reading of wistful, not oppressive, melancholy---warm and sentimental, with very musical flow. The affect seemed just right. EMI had a fine performance by Cecil Licad, Nadia Salerno-Sonnenberg and Antonia Meneses- full of passion and romantic heat Golub, Kaplan, and Cart start out a little fast but then settle down to a beautiful, coherent performance with especially attractive piano tone. It is not as emotionally indulgent as the Naxos. Some will prefer its slight reserve, but it's hard not to love the Naxos. The Ashkenazy in the Natos is not Vladimir but his son, and he has ten times the passion and involvement. The Naxos is the best recording of this you can buy right now, at any price.
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Ashkenazy & Naxos 550467\\
 Haydn & Teldec NA\\
 Golub & Arabesque 6661\\
@@ -697,7 +697,7 @@ If you can find the MK Pletnev, get it by all means. If not, the Bronfman will d
 This has been orchestrated, and the best recording of the orchestral version is by Gin on Ondine. Orchestras can sustain as pianos cannot, and {December} is one piece that sounds much better this way---as if it got left out of {\it Nutcracker} by mistake.
 
 \bigskip
-\begin{tabular}{l l}
+\begin{tabular}{l r}
 Pletnev& MK 418008\\
 Katin & Olympia 192\\
 Bronfman & Sony 60689\\
